change GOAT to MDA

--- a/quarg.kv
+++ b/quarg.kv
@@ -3048,8 +3048,8 @@
 	    				text: "Noise Modes"
 	    				on_release: root.see_nmt()
 	    			CustomButton:
-	    				text: "GOAT"
-	    				on_release: root.see_goat()
+	    				text: "MDA"
+	    				on_release: root.see_mda()
 	    			CustomButton:
 	    				text: "Events"
 	    				on_release: root.see_events()
